--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center">Welcome to the Magical Underground Train Station</h1>
+            <h1 class="text-center">Welcome to the Command Line Terminal Train Station</h1>
             <h2><i class="fas fa-train"></i></h2>
         </div>
         <div class="panel panel-default">
